Fixed calculation steps layout in home page

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -33,17 +33,12 @@
 	<div id="container">
 	 	<div class="section-home calculation" id="calculation">
 	 		<div class="page-section">
-		  		<div class="row row1"></div>
-		 		<div class="row row2">
-		 			<div class="col-md-2">
-			 			<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html">
-		 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
-		 				</button>
-		 			</div>
-	 				<div class="col-md-10 calculation-button-container"></div>
-	 				<button type="button" class="btn btn-default btn-home calculation-button template" style="display: none"></button>
+		  		<div class="button-container">
+		 			<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html">
+	 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
+	 				</button>
 		  		</div>
-	<!-- 	  		<div class="row row3"></div> -->
+ 				<button type="button" class="btn btn-default btn-home calculation-button template" style="display: none"></button>
 	  		</div>
 	 	</div>
 	 	
