Move save function to CalculationStepManager

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -200,6 +200,7 @@
 	<!-- ==== Custom javascript -->
 	<script src="./js/calc.js"></script>
 	<script src="./js/calc-ui.js"></script>
+	<script src="./js/workspace-manager.js"></script>
 	<script src="./js/calculation-step-manager.js"></script>
 	<script src="./js/data-manager.js"></script>
 		
