data-manager refactor

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -163,14 +163,14 @@
 				<div class="col-md-3 col-md-offset-8 data-table-pagination">
 <!-- 					1-15 of 34	 -->
 				</div>
-				<div class="col-md-1 data-table-buttons">
+				<div class="col-md-1 data-table-buttons no-padding">
 					<button class="btn default-btn"><i class="icon-angle-left prev"></i></button>
 					<button class="btn default-btn"><i class="icon-angle-right next"></i></button>			
 				</div>
 			</div>
 			<!-- data table -->
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12 no-padding">
 					<table class="table table-results">
 				        <thead>
 				        </thead>
@@ -205,7 +205,10 @@
 	<script src="./js/calc-ui.js"></script>
 	<script src="./js/workspace-manager.js"></script>
 	<script src="./js/calculation-step-manager.js"></script>
+	
+	<!-- data manipulation managers -->
 	<script src="./js/data-manager.js"></script>
+	<script src="./js/data-table.js"></script>
 	<script src="./js/scatter-plot.js"></script>
 </body>
 </html>
