--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -164,8 +164,8 @@
 <!-- 					1-15 of 34	 -->
 				</div>
 				<div class="col-md-1 data-table-buttons no-padding">
-					<button class="btn default-btn"><i class="icon-angle-left prev"></i></button>
-					<button class="btn default-btn"><i class="icon-angle-right next"></i></button>			
+					<button class="btn default-btn prev"><i class="icon-angle-left"></i></button>
+					<button class="btn default-btn next"><i class="icon-angle-right"></i></button>			
 				</div>
 			</div>
 			<!-- data table -->
