--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -103,7 +103,7 @@
 	
 	<!-- Execution and results  -->
 	<div class="row" id="calculation-step-exec-container" style="width: 100%; height: 100%; padding-top:10px; ">
-		<div class="row" style="height: 8%">
+		<div class="row" >
 			<div class="col-md-2 col-md-offset-5 step-name">
 				<legend></legend>
 			</div>
@@ -112,7 +112,7 @@
 			</div>
 		</div>
 		<!-- progress bar -->
-		<div class="row" style="height: 10%">
+		<div class="row" >
 			<div class="col-md-2">
 			</div>
 			<div class="col-md-8">
@@ -133,7 +133,7 @@
 		</div>
 		
 		<!-- results -->
-		<div class="row" style="height: 75%">
+		<div class="row" style="height: 70%">
 			<div class="col-md-2">
 			</div>
 			<div class="col-md-8" id="calc-step-results" style="height: 100%">
