--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -33,12 +33,22 @@
 	<div id="container">
 	 	<div class="section-home calculation" id="calculation">
 	 		<div class="page-section">
-		  		<div class="button-container">
+		  		<div class="steps-container">
 		 			<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html">
 	 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
 	 				</button>
 		  		</div>
- 				<button type="button" class="btn btn-default btn-home calculation-button template" style="display: none"></button>
+		  		<div class="step template" style="display: none">
+	 				<button type="button" class="btn default-btn btn-home calculation-button"></button>
+	 				<div class="options hide">
+	 					<button type="button" class="btn default-btn execute">
+	 						<i class="icon-play"></i>
+	 					</button>
+	 					<button type="button" class="btn default-btn delete">
+	 						<i class="icon-trash"></i>
+	 					</button>
+	 				</div>
+		  		</div>
 	  		</div>
 	 	</div>
 	 	
