new exec options section in step-edit, scatter plot working for first 5000 results

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -198,7 +198,7 @@
 				<select name="y"></select>
 				<button name="refresh" class="btn no-background"><i class="icon-refresh"></i></button>
 			</div>
-			<div class="row chart"></div>
+			<div class="row chart" id="scatter-plot"></div>
 		</div>
 	</div>
     <!-- Bootstrap core JavaScript
