CALC-208 - Reset Calculation home page section to its original state

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -38,6 +38,9 @@
 	 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
 	 				</button>
 		  		</div>
+		  		<button type="button" class="btn btn-default btn-home calculation-button template"
+		  		 	style="display: none"></button>
+		  		<!-- 
 		  		<div class="step template" style="display: none">
 	 				<button type="button" class="btn default-btn btn-home calculation-button"></button>
 	 				<div class="options hide">
@@ -49,6 +52,7 @@
 	 					</button>
 	 				</div>
 		  		</div>
+		  		 -->
 	  		</div>
 	 	</div>
 	 	
