CALC-205 - include Font Awesome 4.0.0

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -11,7 +11,8 @@
     <!-- Bootstrap core CSS -->
    	<link rel="stylesheet" href="css/bootstrap.css" media="screen">
 	<link rel="stylesheet" href="css/bootswatch.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/font-awesome-3.2.1.min.css">
+	<link rel="stylesheet" href="css/font-awesome-4.0.1.min.css">
 	
 	<!-- ==== Custom style ==== -->
 	<link rel="stylesheet" href="css/calc.css">
@@ -215,6 +216,7 @@
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/modal.js"></script>
 	<script src="./js/tooltip.js"></script>
+	<script src="./js/typeahead.min.js"></script>
 	<!-- chart jquery plugin -->
 	<script src="js/highcharts.js"></script>
 	<!-- Url parser jqeury plugin -->
