CALC-214 - In edit section: replace entity and variable selects with autocomplete

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -189,14 +189,10 @@
 					<form class="form-vertical" method="POST">
 						<input type="hidden" class="form-control" name="entityId" /> 
 						<fieldset>
-							<label class="col-md-12 control-label">Name</label>
-<!-- 							<div class="row form-group"> -->
-							<div class="row" style="margin-top: 10px">
-								<div class="col-md-8 col-md-offset-2">
-									<input type="text" class="form-control" name="name"></input>
-								</div>
+							<div class="form-group" style="margin: 10px 4em 0px 4em">
+								<label class="control-label">Name</label>
+								<input type="text" class="form-control" name="name"></input>
 							</div>
-<!-- 							</div> -->
 							<div class="row" style="margin-top: 25px">
 								<div class="col-md-3 col-md-offset-3">
 									<button type="button" class="btn btn-default save" style="width:100%">Save</button>
