--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap core CSS -->
    	<link rel="stylesheet" href="css/bootstrap.css" media="screen">
 	<link rel="stylesheet" href="css/bootswatch.min.css">
+	<link rel="stylesheet" href="css/bootstrap-combobox.css">
 	<link rel="stylesheet" href="css/font-awesome-3.2.1.min.css">
 	<link rel="stylesheet" href="css/font-awesome-4.0.1.min.css">
 	
@@ -217,6 +218,8 @@
 	<script src="./js/modal.js"></script>
 	<script src="./js/tooltip.js"></script>
 	<script src="./js/typeahead.min.js"></script>
+	<script src="./js/bootstrap-combobox.js"></script>
+	
 	<!-- chart jquery plugin -->
 	<script src="js/highcharts.js"></script>
 	<!-- Url parser jqeury plugin -->
