trying to resolve Highcharts Error #16

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -209,6 +209,7 @@
 	</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
+<!-- 	<script src="./js/yepnope.1.5.4-min.js"></script> -->
 	
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/jquery.form.min.js"></script>	
@@ -220,8 +221,6 @@
 	<script src="./js/typeahead.min.js"></script>
 	<script src="./js/bootstrap-combobox.js"></script>
 	
-	<!-- chart jquery plugin -->
-	<script src="js/highcharts.js"></script>
 	<!-- Url parser jqeury plugin -->
 	<script src="./js/purl.js"></script>
 	
@@ -236,5 +235,23 @@
 	<script src="./js/data-manager.js"></script>
 	<script src="./js/data-table.js"></script>
 	<script src="./js/scatter-plot.js"></script>
+	
+		<script>
+	$(document).ready(function(e){
+// 		yepnope.injectJs("js/highcharts.js");
+// 		yepnope.injectJs("js/scatter-plot.js", function () {
+// 			  console.log("scatter loaded!");
+// 		});
+// 		Highcharts.setOptions({
+// 			global: {
+// 				useUTC: false
+// 			}
+// 		});
+// 		mino = null;// = new Highcharts.Chart();
+	});
+	</script>
+	
+		<!-- chart jquery plugin -->
+	<script src="js/highcharts.js"></script>
 </body>
 </html>
