--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -209,9 +209,9 @@
 	</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
-<!-- 	<script src="./js/yepnope.1.5.4-min.js"></script> -->
 	
 	<script src="./js/jquery.min.js"></script>
+<!-- 	<script src="./js/jquery.js"></script> -->
 	<script src="./js/jquery.form.min.js"></script>	
 	<script src="./js/jquery.easing.js"></script>	
 	<script src="./js/jquery-ui-effects.js"></script>	
@@ -221,6 +221,8 @@
 	<script src="./js/typeahead.min.js"></script>
 	<script src="./js/bootstrap-combobox.js"></script>
 	
+	<!-- chart jquery plugin -->
+	<script src="js/highcharts.js"></script>
 	<!-- Url parser jqeury plugin -->
 	<script src="./js/purl.js"></script>
 	
@@ -236,22 +238,5 @@
 	<script src="./js/data-table.js"></script>
 	<script src="./js/scatter-plot.js"></script>
 	
-		<script>
-	$(document).ready(function(e){
-// 		yepnope.injectJs("js/highcharts.js");
-// 		yepnope.injectJs("js/scatter-plot.js", function () {
-// 			  console.log("scatter loaded!");
-// 		});
-// 		Highcharts.setOptions({
-// 			global: {
-// 				useUTC: false
-// 			}
-// 		});
-// 		mino = null;// = new Highcharts.Chart();
-	});
-	</script>
-	
-		<!-- chart jquery plugin -->
-	<script src="js/highcharts.js"></script>
 </body>
 </html>
