--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -197,12 +197,20 @@
 		</div>
 		
 		<div class="row scatter-plot">
-			<div class="row options">
-				<span>x:</span>
-				<select name="x"></select>
-				<span>y:</span>
-				<select name="y"></select>
-				<button name="refresh" class="btn no-background"><i class="icon-refresh"></i></button>
+			<div class="options form-horizontal form-small">
+				<div class="inline">
+					<div class="form-group form-group-small">
+						<label class="control-label">X</label>
+						<select class="form-control" name="x"></select>
+					</div>
+					<div class="form-group form-group-small">
+						<label class="control-label">Y</label>
+						<select class="form-control" name="y"></select>
+					</div>
+					<div class="form-group form-group-small">
+						<button name="refresh" class="btn no-background refresh"><i class="icon-refresh"></i></button>
+					</div>
+				</div>
 			</div>
 			<div class="row chart" id="scatter-plot"></div>
 		</div>
