--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -27,7 +27,7 @@
 
 <body>
 	<div id="messageContainer" class="col-md-4 col-md-offset-4 alert alert-dismissable" style="display: none;">
-		<button type='button' class='close' data-dismiss='alert'>×</button>
+		<button type='button' class='close no-background' data-dismiss='messageContainer'>×</button>
 		<span></span>
 	</div>
 	
