--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -432,7 +432,7 @@ $(function(){
 		}
 // 		//update data manager job
 // 		dataManager.updateJob($job);
-		
+// 		console.log($job);
 		var $task = $job.tasks[0];
 
 		var $progressBar = $stepProgress.find(".progress-bar");		
@@ -443,6 +443,10 @@ $(function(){
 		var percent = (totalItems > 0 ) ?  parseInt(itemsProcessed / totalItems * 100) : -1 ;
 		
 		switch( $task.status ) {
+		case "PENDING":
+			//refresh job
+			refreshJob($job);
+			break;
 		case "RUNNING": 
 			$progressBar.addClass("progress-bar-info");
 			if( percent >= 0 ) { 
@@ -456,6 +460,23 @@ $(function(){
 			
 			//update data manager job
 			dataManager.updateJob($job);
+			
+			//if job not completed, it gets reloaded from server
+// 			if( $job.completed != true ) {
+			// refresh job
+			refreshJob($job);
+// 			setTimeout(function(){
+// 				//var stepId = $calculationStep.id;
+// 				$.ajax({
+// 					url:"rest/job/"+$job.id+".json",
+// 					dataType:"json"
+// 				})
+// 				.done(function(response){
+// 					var job = response;
+// 					updateCalculationStepStatus(job);
+// 				});
+// 			}, 500);
+// 			}
 			break;
 		case "COMPLETED": 
 			$progressBar.addClass("progress-bar-success");
@@ -465,28 +486,34 @@ $(function(){
 			//update data manager job
 			dataManager.updateJob($job);
 			break;
+		case "FAILED":
+// 			console.log($job);
+			UI.showError($job.lastException.message, false);
+// 			UI.Form.showResultMessage($job.lastException.message, false);
+			break;
+			
 		default: // nothing for now;
 		}
 		
-		//if job not completed, it gets reloaded from server
-		if( $job.completed != true ) {
-			setTimeout(function(){
-				//var stepId = $calculationStep.id;
-				$.ajax({
-					url:"rest/job/"+$job.id+".json",
-					dataType:"json"
-				})
-				.done(function(response){
-					$job = response;
-					updateCalculationStepStatus($job);
-				});
-			}, 500);
-		}
 	};
 	
-	processResults = function($job) {
+	var refreshJob = function($job){
+		setTimeout(function(){
+			//var stepId = $calculationStep.id;
+			$.ajax({
+				url:"rest/job/"+$job.id+".json",
+				dataType:"json"
+			})
+			.done(function(response){
+				var job = response;
+				updateCalculationStepStatus(job);
+			});
+		}, 500);
+	};
+	
+	var processResults = function($job) {
 		if(processResultsStarted != true) {
-			if( $job.status != 'PENDING' ) {
+			if( $job.status != 'PENDING' && $job.status != "FAILED" ) {
 
 				dataManager.showJobResults($job);
 				processResultsStarted = true;
