CALC-213 - In scatter-plot replace x and y select with autocomplete

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -11,9 +11,11 @@
     <!-- Bootstrap core CSS -->
    	<link rel="stylesheet" href="css/bootstrap.css" media="screen">
 	<link rel="stylesheet" href="css/bootswatch.min.css">
-	<link rel="stylesheet" href="css/bootstrap-combobox.css">
 	<link rel="stylesheet" href="css/font-awesome-3.2.1.min.css">
 	<link rel="stylesheet" href="css/font-awesome-4.0.1.min.css">
+	<link rel="stylesheet" href="css/twitter-typeahead.css">
+	<link rel="stylesheet" href="css/bootstrap-combobox.css">
+	<link rel="stylesheet" href="css/calc-bootstrap-combobox.css">
 	
 	<!-- ==== Custom style ==== -->
 	<link rel="stylesheet" href="css/calc.css">
