created sampling-design table

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -82,6 +82,7 @@
 		  		<div class="row row1"></div>
 		 		<div class="row row2">
 		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect Import</button>
+		 			<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Sampling Design</button>
 		  		</div>
 		  		<div class="row row3"></div>
 	  		</div>
@@ -245,6 +246,9 @@
 	<script src="./js/data-manager.js"></script>
 	<script src="./js/data-table.js"></script>
 	<script src="./js/scatter-plot.js"></script>
+	
+	<!-- sampling design  -->
+	<script src="./js/sampling-design-manager.js"></script>
 	
 </body>
 </html>
