--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -28,7 +28,7 @@
 				<input type="hidden" class="form-control" name="id" /> 
 				<fieldset>
 
-					<legend>Calculation Step Editor </legend>
+					<legend>Formula Editor</legend>
 						
 					<div class="form-group">
 						<label class="col-md-2 control-label">Caption</label>
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="select-variable" class="col-md-2 control-label">Output Variable</label>
+						<label for="select-variable" class="col-md-2 control-label">Variable</label>
 						<div class="col-md-9">
 							<select class="form-control" name="variableId" disabled="disabled"></select>
 						</div>
